--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-flask_todo/instance/todo.db
-
 # Ignore temporary files
 *.tmp
 *.temp
@@ -13,3 +11,6 @@ flask_todo/instance/todo.db
 # Ignore IDE specific files
 .idea/
 .vscode/
+
+# Ignore DB files
+flask_todo/instance/todo.db
